# serializer version: 1
# name: test_attempt_parse_json_array_request_raises_graphql_bad_request_error
  '{"errors":[{"message":"Operation data should be a JSON object"}]}'
# ---
# name: test_attempt_parse_json_scalar_request_raises_graphql_bad_request_error
  '{"errors":[{"message":"Operation data should be a JSON object"}]}'
# ---
# name: test_attempt_parse_non_json_request_body_raises_bad_request_error
  'Request body is not a valid JSON'
# ---
# name: test_attempt_parse_non_json_request_raises_bad_request_error
  'Posted content must be of type application/json or multipart/form-data'
# ---
# name: test_attempt_parse_request_missing_content_type_raises_bad_request_error
  'Posted content must be of type application/json or multipart/form-data'
# ---
# name: test_multipart_form_request_fails_if_map_is_not_valid_json
  b"Request 'map' multipart field is not a valid JSON"
# ---
# name: test_multipart_form_request_fails_if_operations_is_not_valid_json
  b"Request 'operations' multipart field is not a valid JSON"
# ---
